@@ -27,8 +27,8 @@ public class CustomInvFunctions {
         PlayerTextures textures = profile.getTextures();
         URL urlObject;
         try {
-            urlObject = new URL(url); // The URL to the skin, for example:
-                                      // https://textures.minecraft.net/texture/18813764b2abc94ec3c3bc67b9147c21be850cdf996679703157f4555997ea63a
+            urlObject = URL.of(java.net.URI.create(url), null); // The URL to the skin, for example:
+                                                               // https://textures.minecraft.net/texture/18813764b2abc94ec3c3bc67b9147c21be850cdf996679703157f4555997ea63a
         } catch (MalformedURLException exception) {
             throw new RuntimeException("Invalid URL", exception);
         }
